k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-fitness-api
  namespace: default
  labels:
    app: ops-fitness-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ops-fitness-api
  template:
    metadata:
      labels:
        app: ops-fitness-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: fitness-api
          image: ops-fitness-tracker:workout-endpoint-v1 # Cambiar a la etiqueta/SHA de tu registro en CD
          imagePullPolicy: Never
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
