k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-fitness-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ops-fitness-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
