k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-fitness-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: ops-fitness.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-fitness-service
                port:
                  number: 80
